fixed some bugs in the register flow

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Welcome - {{ email }}</h2>
+  <h2>Welcome - {{ currentUser.email }}</h2>
   <p>Please subscribe to one of the plans :</p>
   {{welcome}}
 </div>
