--- a/templates/header.html
+++ b/templates/header.html
@@ -14,15 +14,17 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li ng-if="isLoggedIn"><a href="#/account">{{ currentUser.email }}</a></li>
+        <li><a ng-if="!isLoggedIn" href="#/login">Login</a></li>
         <li><a href="#">Help</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a ng-if="!isLoggedIn" href="#/register">Register</a></li>
-            <li><a ng-if="isLoggedIn"href="#/account">Account</a></li>
+            <li><a ng-if="isLoggedIn" href="#/account">Account</a></li>
             <li role="separator" class="divider"></li>
             <li><a ng-if="!isLoggedIn" href="#/login">Login</a></li>
             <li><a ng-if="isLoggedIn" href="#" ng-click="logout()">Logout</a></li>
