--- a/partials/register.html
+++ b/partials/register.html
@@ -1,7 +1,7 @@
 <div class="container" ng-controller="RegisterCtrl">
   <div class="col-md-6 col-md-offset-3">
     <h2>Create your Cirrus account</h2>
-    <form name="registerForm" ng-submit="createAccount()">
+    <form name="registerForm" ng-submit="register()">
       <div class="form-group">
         <label for="inputEmail">Email address:</label>
         <input type="email" class="form-control" placeholder="Email" id="inputEmail" name="inputEmail" ng-model="inputEmail" required>
