--- a/templates/header.html
+++ b/templates/header.html
@@ -21,7 +21,7 @@
         <li><a ng-if="!isLoggedIn" href="#/login">Login</a></li>
         <li><a href="#">Help</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a ng-if="!isLoggedIn" href="#/register">Register</a></li>
             <li><a ng-if="isLoggedIn" href="#/account">Account</a></li>
