added two different views in the home page when logged in, you are invited to choose a package

--- a/partials/account.html
+++ b/partials/account.html
@@ -2,5 +2,5 @@
   <h2>Welcome on your account management page</h2>
   <br>
   <p>Yourname is : {{ yourname }}</p>
-  <button class="btn btn-danger" ng-click="logout()">Logout</a>
+  <button class="btn btn-danger" ng-controller="LoginCtrl" ng-click="logout()">Logout</a>
 </div
