--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,11 +3,15 @@
     <div class="row">
       <div class="col-sm-7">
         <h3>Nice footer</h3>
-        <p>Don't you think ?</p>
+        Don't you think ?<br>
+        We do think so<br>
+        This is amazing.<br>
+        Really.<br>
       </div>
       <div class="col-sm-5">
+        <h3>Contact Us</h3>
         <address>
-        <strong>Cirrus</strong><br>
+        Cirrus<br>
         42 Archangel street<br>
         L-1337 Cloudcity<br>
         nowhere@cirrus.io<br>
