refactoring in progress..

--- a/app/components/header/headerView.html
+++ b/app/components/header/headerView.html
@@ -22,13 +22,13 @@
         <li><a href="#">Help</a></li>
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
-          <ul class="dropdown-menu" ng-controller="LoginCtrl">
+          <!--<ul class="dropdown-menu" ng-controller="LoginCtrl">
             <li><a ng-if="!currentUser" href="#/register">Register</a></li>
             <li><a ng-if="currentUser" href="#/account">Account</a></li>
             <li role="separator" class="divider"></li>
             <li><a ng-if="!currentUser" href="#/login">Login</a></li>
             <li><a ng-if="currentUser" href="#" ng-click="logout()">Logout</a></li>
-          </ul>
+          </ul>-->
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
