--- a/app/components/header/header.view.html
+++ b/app/components/header/header.view.html
@@ -16,19 +16,20 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Home</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li ng-if="currentUser"><a href="#/account">{{ currentUser.email }}</a></li>
-        <li><a ng-if="!currentUser" href="#/login">Login</a></li>
-        <li><a href="#">Help</a></li>
+      <ul class="nav navbar-nav navbar-right" ng-controller="HeaderCtrl as vm">
+        <li ng-if="vm.currentUser"><a href="#/account">{{ vm.currentUser.email }}</a></li>
+        <li><a ng-if="!vm.currentUser" href="#/login">Login</a></li>
+        <li><a href="#/contact">Contact</a></li>
+        <li><a href="#/help">Help</a></li>
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
-          <!--<ul class="dropdown-menu" ng-controller="LoginCtrl">
-            <li><a ng-if="!currentUser" href="#/register">Register</a></li>
-            <li><a ng-if="currentUser" href="#/account">Account</a></li>
+          <ul class="dropdown-menu">
+            <li><a ng-if="!vm.currentUser" href="#/register">Register</a></li>
+            <li><a ng-if="vm.currentUser" href="#/account">Account</a></li>
             <li role="separator" class="divider"></li>
-            <li><a ng-if="!currentUser" href="#/login">Login</a></li>
-            <li><a ng-if="currentUser" href="#" ng-click="logout()">Logout</a></li>
-          </ul>-->
+            <li><a ng-if="!vm.currentUser" href="#/login">Login</a></li>
+            <li><a ng-if="vm.currentUser" href="#" ng-click="logout()">Logout</a></li>
+          </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
