added ngtoast notifications and created plan management page

--- a/app/components/contact/contact.view.html
+++ b/app/components/contact/contact.view.html
@@ -1,3 +1,7 @@
+<div ng-include="'app/components/header/header.view.html'"></div>
+
 <div ng-controller="ContactCtrl as vm">
 {{ vm.contactMe }}
 </div>
+
+<div ng-include="'app/components/header/footer.view.html'"></div>
