--- a/app/components/user/account.view.html
+++ b/app/components/user/account.view.html
@@ -1,6 +1,19 @@
+<div ng-include="'app/components/header/header.view.html'"></div>
+
 <div class="container" ng-controller="UserCtrl as vm">
   <h2>Welcome on your account management page</h2>
-  <br>
-  <p>Yourname is : {{ vm.currentUser.email }}</p>
-  <button class="btn btn-danger" ng-click="vm.logout()">Logout</a>
-</div
+
+  <div class="row">
+    <p>Yourname is : {{ vm.currentUser.email }}</p>
+  </div>
+
+  <div class="row">
+    <a class="btn btn-primary" href="#/plans">Select a plan</a>
+  </div>
+
+  <div class="row">
+    <button class="btn btn-danger" ng-click="vm.logout()">Logout</button>
+  </div>
+</div>
+
+<div ng-include="'app/components/footer/footer.view.html'"></div>
