--- a/app/components/404/404.view.html
+++ b/app/components/404/404.view.html
@@ -1,1 +1,3 @@
-hoho, 404 error
+<div ng-include="'app/components/header/header.view.html'"></div>
+HOHO, 404 ERROR !
+<div ng-include="'app/components/header/footer.view.html'"></div>
