--- a/app/components/footer/footer.view.html
+++ b/app/components/footer/footer.view.html
@@ -1,22 +1,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-sm-8">
-        <h3>Nice footer</h3>
-        Don't you think ?<br>
-        We do think so<br>
-        This is amazing.<br>
-        Really.<br>
-      </div>
-      <div class="col-sm-4">
-        <h3>Contact Us</h3>
-        <address>
-        Cirrus<br>
-        42 Archangel street<br>
-        L-1337 Cloudcity<br>
-        nowhere@cirrus.io<br>
-        </ul>
-      </div>
+      <p class="text-right"></p>
     </div>
   </div>
 </footer>
