--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,7 +1,20 @@
+<div ng-include="'app/components/header/header.view.html'"></div>
+
 <div class="container">
-  <div class="col-md-6 col-md-offset-3">
-    <h2>Welcome on Cirrus home page</h2>
-    <p>You are on the landing page of Cirrus, your ultimate internet and service provider</p>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet</p>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h2>Welcome on Cirrus home page</h2>
+      <p>You are on the landing page of Cirrus, your ultimate internet and service provider</p>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+          <a class="btn btn-primary" href="#/login">Login</a>
+          or
+          <a class="btn btn-link" href="#/register">Register</a>
+    </div>
   </div>
 </div>
+
+<div ng-include="'app/components/header/footer.view.html'"></div>
