--- a/app/components/user/login.view.html
+++ b/app/components/user/login.view.html
@@ -1,6 +1,8 @@
+<div ng-include="'app/components/header/header.view.html'"></div>
+
 <div class="container" ng-controller="UserCtrl as vm">
   <div class="col-md-6 col-md-offset-3">
-    <h2>Please login with your Cirrus accountt
+    <h2>Please login with your Cirrus account
     </h2>
     <form ng-submit="vm.login()">
       <div class="form-group">
@@ -11,13 +13,15 @@
         <label for="vm.inputPassword">Password</label>
         <input type="password" class="form-control" id="vm.inputPassword" placeholder="Password" ng-model="vm.inputPassword" required>
       </div>
-      <div ng-if="vm.error" class="alert alert-danger fade in">
+      <!--<div ng-if="vm.error" class="alert alert-danger fade in">
           <span class="close" data-dismiss="alert">&times;</span>
           <strong>Error!</strong> {{vm.error }}
-      </div>
+      </div>-->
       <button type="submit" class="btn btn-primary">Submit</button>
       <a href="#/register" class="btn btn-link">Register</a>
     </form>
 
   </div>
 </div>
+
+<div ng-include="'app/components/footer/footer.view.html'"></div>
