--- a/app/components/contact/contact.view.html
+++ b/app/components/contact/contact.view.html
@@ -1,7 +1,3 @@
-<div ng-include="'app/components/header/header.view.html'"></div>
-
 <div ng-controller="ContactCtrl as vm">
-{{ vm.contactMe }}
+{{ vm.contactMe }}<br/>
 </div>
-
-<div ng-include="'app/components/header/footer.view.html'"></div>
