--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,5 +1,3 @@
-<div ng-include="'app/components/header/header.view.html'"></div>
-
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -10,11 +8,9 @@
   </div>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-          <a class="btn btn-primary" href="#/login">Login</a>
+          <a class="btn btn-primary" ui-sref=".login">Login</a>
           or
-          <a class="btn btn-link" href="#/register">Register</a>
+         <a class="btn btn-link" ui-sref=".register">Register</a>
     </div>
   </div>
 </div>
-
-<div ng-include="'app/components/header/footer.view.html'"></div>
