--- a/app/components/header/header.view.html
+++ b/app/components/header/header.view.html
@@ -8,26 +8,26 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Cirrus</a>
+      <a class="navbar-brand" ui-sref="app">Cirrus</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li><a ui-sref="app">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="HeaderCtrl as vm">
-        <li ng-if="vm.currentUser"><a href="#/account">{{ vm.currentUser.email }}</a></li>
-        <li><a ng-if="!vm.currentUser" href="#/login">Login</a></li>
-        <li><a href="#/contact">Contact</a></li>
-        <li><a href="#/help">Help</a></li>
+        <li ng-if="vm.currentUser"><a ui-sref=".account">{{ vm.currentUser.email }}</a></li>
+        <li><a ng-if="!vm.currentUser" ui-sref=".login">Login</a></li>
+        <li><a ui-sref=".contact">Contact</a></li>
+        <li><a ui-sref=".help">Help</a></li>
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a ng-if="!vm.currentUser" href="#/register">Register</a></li>
-            <li><a ng-if="vm.currentUser" href="#/account">Account</a></li>
+            <li><a ng-if="!vm.currentUser" ui-sref=".register">Register</a></li>
+            <li><a ng-if="vm.currentUser" ui-sref=".account">Account</a></li>
             <li role="separator" class="divider"></li>
-            <li><a ng-if="!vm.currentUser" href="#/login">Login</a></li>
+            <li><a ng-if="!vm.currentUser" ui-sref=".login">Login</a></li>
             <li><a ng-if="vm.currentUser" href="#" ng-click="logout()">Logout</a></li>
           </ul>
         </li>
