--- a/app/components/user/login.view.html
+++ b/app/components/user/login.view.html
@@ -1,5 +1,3 @@
-<div ng-include="'app/components/header/header.view.html'"></div>
-
 <div class="container" ng-controller="UserCtrl as vm">
   <div class="col-md-6 col-md-offset-3">
     <h2>Please login with your Cirrus account
@@ -18,10 +16,8 @@
           <strong>Error!</strong> {{vm.error }}
       </div>-->
       <button type="submit" class="btn btn-primary">Submit</button>
-      <a href="#/register" class="btn btn-link">Register</a>
+      <a class="btn btn-link" ui-sref="app.register">Register</a>
     </form>
 
   </div>
 </div>
-
-<div ng-include="'app/components/footer/footer.view.html'"></div>
