--- a/app/components/user/account.view.html
+++ b/app/components/user/account.view.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="UserCtrl as vm">
+<div class="container">
   <h2>Welcome on your account management page</h2>
 
   <div class="row">
