--- a/app/components/user/login.view.html
+++ b/app/components/user/login.view.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="UserCtrl as vm">
+<div class="container">
   <div class="col-md-6 col-md-offset-3">
     <h2>Please login with your Cirrus account
     </h2>
