--- a/app/components/user/register.view.html
+++ b/app/components/user/register.view.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="UserCtrl as vm">
+<div class="container">
   <div class="col-md-6 col-md-offset-3">
     <h2>Create your Cirrus account</h2>
     <form name="vm.registerForm" ng-submit="vm.register()">
