--- a/app/components/header/header.view.html
+++ b/app/components/header/header.view.html
@@ -11,27 +11,53 @@
       <a class="navbar-brand" ui-sref="app">Cirrus</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a ui-sref="app">Home</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li ng-if="vm.currentUser"><a ui-sref=".account">{{ vm.currentUser.email }}</a></li>
-        <li><a ng-if="!vm.currentUser" ui-sref=".login">Login</a></li>
-        <li><a ui-sref=".contact">Contact</a></li>
-        <li><a ui-sref=".help">Help</a></li>
+
+      <!-- If logged in -->
+      <ul ng-if="vm.isLoggedIn" class="nav navbar-nav navbar-right">
+        <li><a ui-sref="app.account">{{ vm.currentUser.email }}</a></li>
+        <li><a ui-sref="app.contact">Contact</a></li>
+        <li><a ui-sref="app.help">Help</a></li>
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a ng-if="!vm.currentUser" ui-sref=".register">Register</a></li>
-            <li><a ng-if="vm.currentUser" ui-sref=".account">Account</a></li>
+            <li><a ng-if="vm.currentUser" ui-sref="app.account">Account</a></li>
             <li role="separator" class="divider"></li>
-            <li><a ng-if="!vm.currentUser" ui-sref=".login">Login</a></li>
-            <li><a ng-if="vm.currentUser" href="#" ng-click="logout()">Logout</a></li>
+            <li><a ng-if="vm.currentUser" href="#" ng-click="vm.logout()">Logout</a></li>
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
+      <!-- If not ... -->
+      <ul ng-if="!vm.isLoggedIn" class="nav navbar-nav navbar-right">
+        <li><a ui-sref="app.contact">Contact</a></li>
+        <li><a ui-sref="app.help">Help</a></li>
+        <li><a ui-sref="app.account">Account</a></li>
+        <li class="dropdown">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a ui-sref="app.register">Register</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a ui-sref="app.login">Sign in</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form ng-if="!vm.isLoggedIn" class="navbar-form navbar-right">
+        <div class="form-group">
+          <input type="email" class="form-control" id="vm.email" placeholder="Email" ng-model="vm.email" required>
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" id="vm.password" placeholder="Password" ng-model="vm.password" required>
+        </div>
+        <button type="submit" class="btn btn-success" ng-click="vm.login()">Sign in</button>
+      </form>
+      
+    </div>
+
+
+  </div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
 </nav>
